Fix a type on portfolio section, fix links alignment to the center in aside.

--- a/css/style.css
+++ b/css/style.css
@@ -1120,7 +1120,7 @@ input[type="color"]::-webkit-color-swatch {
     font-size: 2.65rem;
     font-weight: bold;
     position: relative;
-    -webkit-text-fill-color: transparent;
+    color: transparent;
     background: -webkit-gradient(linear, left top, left bottom, from(var(--heading-color)), to(var(--primary-color)));
     background: linear-gradient(var(--heading-color), var(--primary-color));
     -webkit-background-clip: text;
@@ -1147,8 +1147,8 @@ input[type="color"]::-webkit-color-swatch {
 .aside .logo a::before {
     top: -7px;
     left: -10px;
-    border-top: 5px solid currentColor;
-    border-left: 5px solid currentColor;
+    border-top: 6px solid currentColor;
+    border-left: 6px solid currentColor;
     border-image-slice: 10%;
     border-image-source: linear-gradient(var(--heading-color), var(--primary-color));
 }
@@ -1156,26 +1156,10 @@ input[type="color"]::-webkit-color-swatch {
 .aside .logo a::after {
     bottom: -7px;
     right: -10px;
-    border-bottom: 5px solid currentColor;
-    border-right: 5px solid currentColor;
+    border-bottom: 6px solid currentColor;
+    border-right: 6px solid currentColor;
     border-image-slice: 10%;
     border-image-source: linear-gradient(var(--primary-color), var(--heading-color));
-}
-
-.aside nav.nav ul.links-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
 }
 
 .aside nav.nav ul.links-container li {
@@ -1202,55 +1186,24 @@ input[type="color"]::-webkit-color-swatch {
 
 .aside nav.nav ul.links-container li a {
     width: 100%;
-    margin: 0 auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    column-gap: 1rem;
     align-items: center;
     pointer-events: none;
 }
 
-.aside nav.nav ul.links-container li a span {
-    -webkit-box-flex: 0.5;
-    -ms-flex: 0.5;
-    flex: 0.5;
-}
-
 .aside nav.nav ul.links-container li a i {
-    -webkit-box-flex: 0.15;
-    -ms-flex: 0.15;
-    flex: 0.15;
+    text-align: right;
 }
 
 @media (max-width: 600px) {
     .aside nav.nav ul.links-container li {
         font-size: 1.5rem;
     }
-}
 
-@media (max-width: 600px) and (max-width: 600px) {
     .aside nav.nav ul.links-container li a {
-        width: 15%;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-    }
-    .aside nav.nav ul.links-container li a span {
-        -webkit-box-flex: 1;
-        -ms-flex: 1 0 50%;
-        flex: 1 0 50%;
-        max-width: 50%;
-    }
-    .aside nav.nav ul.links-container li a i {
-        -webkit-box-flex: 1;
-        -ms-flex: 1 0 50%;
-        flex: 1 0 50%;
-        max-width: 50%;
+        grid-template-columns: 1fr 1.18fr;
     }
 }
 
